# blub

./: .ackrc  .gitignore  .mise.toml  README.md  TODO.txt  dev_setup.py  mise.toml  mqtt_logger.py  package_rp2040_index.json  pyproject.toml
adc16x8_pcb/: adc16x8_pcb.kicad_pcb  adc16x8_pcb.kicad_pro  adc16x8_pcb.kicad_sch
analog_pcb/: analog_pcb.kicad_pcb  analog_pcb.kicad_pro  analog_pcb.kicad_sch
config_pcb/: config_pcb.kicad_pcb  config_pcb.kicad_pro  config_pcb.kicad_sch
display_test/: sketch.yaml  src
feather_dock_pcb/: feather_dock_pcb.kicad_pcb  feather_dock_pcb.kicad_pro  feather_dock_pcb.kicad_sch
kicad_parts/: Blub_Parts.kicad_sym
led2Ax12_pcb/: channel.kicad_sch  led2Ax12_pcb.kicad_pcb  led2Ax12_pcb.kicad_pro  led2Ax12_pcb.kicad_sch  make_fab.kibot.yaml
led700x16_pcb/: channel.kicad_sch  led700x16_pcb.kicad_pcb  led700x16_pcb.kicad_pro  led700x16_pcb.kicad_sch
led_driver/: channel.kicad_sch  fp-lib-table  led_driver.kicad_pcb  led_driver.kicad_pro  led_driver.kicad_sch
led_driver_pcb/: channel.kicad_sch  led_driver_pcb.kicad_pcb  led_driver_pcb.kicad_pro  led_driver_pcb.kicad_sch
magneto_analog_pcb/: magneto_analog_pcb.kicad_pcb  magneto_analog_pcb.kicad_pro  magneto_analog_pcb.kicad_sch
magneto_digital_pcb/: magneto_digital_pcb.kicad_pcb  magneto_digital_pcb.kicad_pro  magneto_digital_pcb.kicad_sch  sym-lib-table
magneto_pcb/: fp-lib-table  magneto_pcb.kicad_pcb  magneto_pcb.kicad_pro
misc/: pipe_stress.py
notes/: impute_exif_gps.py
old_led700x16_pcb/: channel.kicad_sch  old_led700x16_pcb.kicad_pro
personality_pcb/: fp-lib-table  (+4 more)
(+138 files in other folders)
